--- a/.classpath
+++ b/.classpath
@@ -4,14 +4,16 @@
 	<classpathentry kind="src" path="input_output"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/cmu_time_awb.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/cmu_us_kal.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/cmudict04.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/cmulex.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/cmutimelex.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/en_us.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/freetts.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/freetts-jsapi10.jar"/>
-	<classpathentry kind="lib" path="C:/git/TTS/freetts-1.2.2-bin/freetts-1.2/lib/mbrola.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/cmu_time_awb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/cmu_us_kal.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/cmudict04.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/cmulex.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/cmutimelex.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/en_us.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/freetts.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/freetts-jsapi10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/freetts-1.2/lib/mbrola.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/gtranslateapi-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/Documents/GitHub/TTS/jl1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
