--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,15 @@
 /myapp/
+/res/
+/chessclock/
+/clock/
+/guis/
+/chessobjects/
+/chessengine/
+/chesscomms/
+/speech/
+/interfaces/
+/main/
+/chess_speech/
+/algorithms/
+/engine/
+/objects/
