Added moves from speech generated text file

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,8 @@
-/myapp/
-/res/
-/chessclock/
-/clock/
-/guis/
-/chessobjects/
-/chessengine/
-/chesscomms/
-/speech/
-/interfaces/
-/main/
-/chess_speech/
 /algorithms/
 /engine/
+/interfaces/
+/main/
 /objects/
+/res/
+/speech/
+/whiteRook.png
